k8s/socket-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: socket-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 3002
      targetPort: 3002
